@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1027 2012/06/02 07:41:53 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1028 2012/06/02 19:32:06 zmedico Exp $
+
+  02 Jun 2012; Zac Medico <zmedico@gentoo.org> portage-2.1.10.63.ebuild,
+  portage-2.1.10.64.ebuild, portage-2.2.0_alpha108.ebuild,
+  portage-2.2.0_alpha109.ebuild, portage-9999.ebuild:
+  Require bash 4.1 for exec {mj_control_fd}<>${mj_control_pipe}.
 
 *portage-2.2.0_alpha109 (02 Jun 2012)
 
